animation issue fix on ios with font size and letter spacing

--- a/style.css
+++ b/style.css
@@ -5,25 +5,8 @@
 }
 
 /* width */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 0px;
-}
-
-
-/* ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-}
- 
-
-::-webkit-scrollbar-thumb {
-  background: red; 
-  border-radius: 10px;
-}
-
-
-::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
 } */
 
 body {
@@ -35,7 +18,6 @@ body {
   padding: 0;
   margin: 0;
   overflow: scroll;
-  /* padding: 20px; */
 }
 
 a {
@@ -43,16 +25,13 @@ a {
 }
 .card {
   width: 100%;
-  /* max-width: 700px; */
   overflow-y: auto;
   position: relative;
   z-index: 1;
-  /* overflow-x: hidden; */
   background-color: rgba(255, 255, 255, 1);
   display: flex;
   transition: 0.3s;
   flex-direction: column;
-  /* border-radius: 10px; */
   box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.2);
 }
 
@@ -61,25 +40,11 @@ a {
     background-image: url('./assets/wave-haikei.svg');
     background-position-y: 10%;
   }
- 
 }
-
-/* .card[data-state='#contact'] { */
-  /* height: 430px; */
-/* } */
-
-/* .card[data-state='#experience'] { */
-  /* height: 550px; */
-/* } */
 
 .card.is-active {
   .card-header {
     height: 80px;
-  }
-  
-  .card-cover {
-    height: 100px;
-    top: -50px;
   }
   
   .card-avatar {
@@ -98,12 +63,12 @@ a {
   
   .card-fullname {
     bottom: 18px;
-    font-size: 19px;
+    font-size: 22px;
   }
   
   .card-jobtitle {
     bottom: 16px;
-    letter-spacing: 1px;
+    /* letter-spacing: 1px; */
     font-size: 10px;
   }
 }
@@ -119,25 +84,6 @@ a {
   * {
     transition: 0.3s;
   }
-}
-
-/* .card-header:not(.card.is-active) {
-  background-image: url('./assets/wave-haikei.svg');
-} */
-
-.card-cover {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  height: 160px;
-  top: -20%;
-  left: 0;
-  will-change: top;
-  background-size: cover;
-  background-position: center;
-  filter: blur(30px);
-  transform: scale(1.2);
-  transition: 0.5s;
 }
 
 .card-avatar {
@@ -167,7 +113,7 @@ a {
 .card-jobtitle {
   position: absolute;
   bottom: 0;
-  font-size: 11px;
+  font-size: 10px;
   white-space: nowrap;
   font-weight: 500;
   opacity: 0.7;
